Adding live support chat weavy-sln

--- a/weavy-sdk/src/Areas/Apps/Views/Messenger/Messenger.cshtml
+++ b/weavy-sdk/src/Areas/Apps/Views/Messenger/Messenger.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
     BodyAttributes.Add("class", "dual");
+    var isAgent = WeavyContext.Current.User.IsInRole("Agent");
     if (Model.ConversationId == null) {
         BodyAttributes.Add("class", "one");
     } else {
@@ -47,6 +48,11 @@
                     <button type="button" class="btn btn-icon btn-reset">@Svg.Spinner(size: 18, spin: true)@Svg.Icon("close")</button>
                 </div>
             </form>
+            <div class="convo-view-btns">
+                <button class="open-tickets-btn btn btn-outline-secondary active">Open Tickets</button>
+                <button class="unclaimed-tickets-btn btn btn-outline-secondary">Unclaimed Tickets</button>
+                <button class="closed-tickets-btn btn btn-outline-secondary">Closed Tickets</button>
+            </div>
             <nav class="list-group" id="conversations">
                 @{ Html.RenderPartial("_Conversations", Model); }
             </nav>
@@ -67,7 +73,9 @@
         <main id="main" class="pane conversation @(Model.Conversation.IsRoom ? " room" : "")@(Model.Conversation.IsPinned ? " pinned" : "")@(Model.Conversation.IsStarred() ? " starred" : "")@(Model.Conversation.IsRead ? "" : " unread")" data-id="@Model.Conversation.Id">
             <header class="pane-header">
                 <div class="pane-actions">
-                    <a href="@(Url.Action<MessengerController>(c => c.Index(null)))" class="btn btn-primary btn-icon btn-back">@Svg.Icon("arrow-left")</a>
+                    @if (isAgent) { 
+                        <a href="@(Url.Action<MessengerController>(c => c.Index(null)))" class="btn btn-primary btn-icon btn-back">@Svg.Icon("arrow-left")</a>
+                    }
                     @if (WeavyContext.Browser.Mobile) {
                         <span class="badge badge-danger text-truncate">@(Model.Unread > 0 ? Model.Unread.ToString() : "")</span>
                     }
@@ -95,6 +103,7 @@
         </main>
         Html.RenderPartial("_ScrollbarsInit");
         Html.RenderPartial("_InfoModal", Model.Conversation);
+        Html.RenderPartial("_FeedbackModal", Model.Conversation);
         Html.RenderPartial("_ProfileModal");
         Html.RenderPartial("_PeopleModal", Model);
     }
